# Clau-Decode

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
clau_decode/: __init__.py
demo-data/: generate.py
demo-data/projects/-Users-alex-code-data--pipeline/: 092ddf24-f6ec-4c36-bfaa-e37d114a2d32.jsonl  3884adce-88eb-4d86-94bc-f579857e3cd6.jsonl  991132c0-1e12-4ef9-be8f-f4f86b9cca5c.jsonl  ad4da2e7-d24d-464d-80e5-5df79e89f526.jsonl  cf93dd30-f422-49ae-a585-a8b2deacacaa.jsonl  d2916a5a-7410-4553-bbf1-df8ac9fd3e5f.jsonl
demo-data/projects/-Users-alex-code-infra/: 38ed5cc8-3e6a-44a2-880d-5790952804f2.jsonl  9088297f-f8af-4d55-ba16-a0e4b73fe210.jsonl  af1e4863-c416-4536-9243-559840b48853.jsonl  ca816551-0d66-4430-9188-ac20f8aeef0e.jsonl  d5271570-65f4-48d5-a2f9-d2b255f3a743.jsonl  d7395a64-65d9-4755-b5dd-0a505bac7965.jsonl  (+1 more)
demo-reel/: before.tape  pipeline.sh  recording.json  setup.sh
demo-reel/fake-home/: .zshrc
docs/: cleanup-plan-2026-05-21.md  code-review-2026-05-27.md  codex-live-driving-phase4.md  native-input-required-plan.md  native-pty-rendering.md  phase4-implementation-plan.md  pty-ownership-phase0-findings.md  pty-ownership-phase1-findings.md  pty-ownership-plan.md  pty-runner-phase1-findings.md  pty-runner-phase2-spike.md  pty-runner-plan.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx  router.ts
frontend/src/api/: client.ts  (+2 more)
frontend/tests/: ghostty-web.pw.ts
scripts/: btw_spike.py  capture-move-bundle.sh
src/clau_decode/: __init__.py  __main__.py  _auth_env.py  _pty_preexec.py  btw_capture.py  claude_runner.py  cli.py  config.py  db.py  driver_manager.py  editor.py  events_bus.py  locks.py  migrate.py  models.py  parser.py  pty_native.py  pty_runner.py  pty_screen_state.py  recap_runner.py  reporter.py  scanner.py  server.py  watcher.py
tests/: conftest.py  test_active_data_sources.py  test_analytics_ignores_ephemerals.py  test_btw_capture.py  test_claude_runner.py  test_cli.py  test_codex_e2e.py  test_db.py  test_db_session_meta.py  test_delete_sessions.py  test_dev_import_path.py  test_e2e.py  test_editor.py  test_ephemeral_messages.py  test_events_bus.py  test_export_ephemeral.py  test_locks.py  test_migrate.py  test_parser.py  test_pty_native.py  test_pty_runner.py  test_pty_runner_btw.py  test_pty_screen_state.py  test_recaps.py  test_reporter.py  test_scanner.py  test_search_ephemeral.py  test_server.py  test_server_capabilities.py  test_server_open_terminal.py  test_server_session_title.py
tests/analytics/: test_aggregator.py  test_cost.py  test_extractor.py  test_fast_parity.py  test_integration.py  test_pricing.py  test_prompt.py  test_service.py  test_stats.py  test_tips.py
tests/drivers/: fake_cli.py  test_driver_manager.py  test_tmux_driver.py
tests/fixtures/: aaaaaaaa-0000-0000-0000-000000000001.jsonl  bad-name.jsonl  bbbbbbbb-0000-0000-0000-000000000002.jsonl  fake_claude.py  fake_claude_tui.py  session_with_usage.jsonl  simple_session.jsonl
tests/providers/: test_claude_adapter.py  test_codex_adapter.py  test_registry.py
(+976 files in other folders)
