[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "clau-decode"
dynamic = ["version"]
description = "A local web UI for browsing Claude Code chat history"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "anthropic", "chat-history", "viewer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.0.0",
    "watchfiles>=0.21.0",
    "aiosqlite>=0.20.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
clau-decode = "clau_decode.cli:main"

[project.urls]
Homepage = "https://github.com/nicholasgasior/clau-decode"
Repository = "https://github.com/nicholasgasior/clau-decode"
Issues = "https://github.com/nicholasgasior/clau-decode/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/clau_decode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=clau_decode --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/clau_decode"]
